# ERASOR

./: CMakeLists.txt  ERASOR_pcd.cpp  README.md
config/: av2.yaml  haomo.yaml  seq_00.yaml  seq_01.yaml  seq_02.yaml  seq_05.yaml  seq_07.yaml  seq_semindoor.yaml  your_own_env_ouster.yaml
include/: ERASOR.h  MapUpdater.h  utils.h
launch/: mapgen.launch  run_erasor.launch
src/: ERASOR.cpp  MapUpdater.cpp
src/offline_map_updater/: main_in_your_env.cpp
